--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SIdiom</string>
+    <string name="app_name">历史汇</string>
     <string name="search_advice">请输入成语</string>
 </resources>
